packages/@burger-editor/blocks/src/general.css
:root {
	--bge-auto-fit-base-width: 40em;

	/* Custom width */
	--bge-options-width--normal: calc(800 / 16 * 1rem);
	--bge-options-width--small: calc(400 / 16 * 1rem);
	--bge-options-width--medium: calc(600 / 16 * 1rem);
	--bge-options-width--large: calc(1200 / 16 * 1rem);
	--bge-options-width--full: 100dvi;
	--bge-options-width: var(--bge-options-width--normal);

	/* Custom margin */
	--bge-options-margin--normal: 3rem;
	--bge-options-margin--none: 0;
	--bge-options-margin--small: 1rem;
	--bge-options-margin--large: 8rem;
	--bge-options-margin: var(--bge-options-margin--normal);

	/* Custom background color */
	--bge-options-bgcolor--transparent: transparent;
	--bge-options-bgcolor--white: #fff;
	--bge-options-bgcolor--gray: #dfdfdf;
	--bge-options-bgcolor--blue: #eaf3f8;
	--bge-options-bgcolor--red: #fcc;
	--bge-options-bgcolor: var(--bge-options-bgcolor--transparent);

	/* Custom border style */
	--bge-options-border--none: none;
	--bge-options-border--solid: solid 1px currentColor;
	--bge-options-border--dashed: dashed 1px currentColor;
	--bge-options-border--dotted: dotted 1px currentColor;
	--bge-options-border--wide: solid 3px currentColor;
	--bge-options-border: var(--bge-options-border--none);

	/* Custom padding-block */
	--bge-options-padding-block--none: 0;
	--bge-options-padding-block--small: 1rem;
	--bge-options-padding-block--middle: 3rem;
	--bge-options-padding-block--large: 5rem;
	--bge-options-padding-block: var(--bge-options-padding-block--none);

	/* Custom padding-inline */
	--bge-options-padding-inline--default-gutter: 2rem;
	--bge-options-padding-inline--none: 0;
	--bge-options-padding-inline--small: 1rem;
	--bge-options-padding-inline--middle: 3rem;
	--bge-options-padding-inline--large: 5rem;
	--bge-options-padding-inline: var(--bge-options-padding-inline--default-gutter);

	/* Custom gap */
	--bge-options-gap--normal: 1rem;
	--bge-options-gap--small: 0.5rem;
	--bge-options-gap--large: 2rem;
	--bge-options-gap: var(--bge-options-gap--normal);
}

:where([data-bge-container]) {
	--bge-container-margin-block-end: var(--bge-options-margin);
	max-inline-size: var(--bge-options-width);
	margin-block-end: var(--bge-container-margin-block-end);
	margin-inline: auto;
	container-name: bge-container;
	container-type: inline-size;

	&:where(:last-child) {
		--bge-last-container-margin-block-end: 0;
		--bge-container-margin-block-end: var(--bge-last-container-margin-block-end);
	}
}

:where([data-bge-container-frame]) {
	--bge-container-background-color: var(--bge-options-bgcolor);
	--bge-container-border: var(--bge-options-border);
	--bge-container-padding-block: var(--bge-options-padding-block);
	--bge-container-padding-inline: var(--bge-options-padding-inline);
	padding-block: var(--bge-container-padding-block);
	padding-inline: var(--bge-container-padding-inline);
	background-color: var(--bge-container-background-color);
	border: var(--bge-container-border);
}

:where([data-bge-container='grid'], [data-bge-container^='grid:']) {
	&:where([data-bge-container$=':2'], [data-bge-container*=':2:'])
		:where([data-bge-container-frame]) {
		--bge-grid-col: 2;
	}

	&:where([data-bge-container$=':3'], [data-bge-container*=':3:'])
		:where([data-bge-container-frame]) {
		--bge-grid-col: 3;
	}

	&:where([data-bge-container$=':4'], [data-bge-container*=':4:'])
		:where([data-bge-container-frame]) {
		--bge-grid-col: 4;
	}

	&:where([data-bge-container$=':5'], [data-bge-container*=':5:'])
		:where([data-bge-container-frame]) {
		--bge-grid-col: 5;
	}

	:where([data-bge-container-frame]) {
		display: grid;
		grid-template-columns: repeat(var(--bge-grid-col, 1), minmax(0, 1fr));
		gap: var(--bge-options-gap);

		&:is([data-bge-container*=':auto-fit:'] *) {
			grid-template-columns: repeat(
				auto-fit,
				minmax(calc(var(--bge-auto-fit-base-width) / var(--bge-grid-col, 1)), 1fr)
			);
		}
	}

	:where([data-bge-group]) {
		--item-count: 1;
		display: grid;
		grid-template-rows: subgrid;
		grid-row: span var(--item-count);

		/* Subgrid hack 2 items */
		&[data-bge-group]:has([data-bge-item]:nth-child(2):last-child) {
			--item-count: 2;
		}

		/* Subgrid hack 3 items */
		&[data-bge-group]:has([data-bge-item]:nth-child(3):last-child) {
			--item-count: 3;
		}

		/* Subgrid hack 4 items */
		&[data-bge-group]:has([data-bge-item]:nth-child(4):last-child) {
			--item-count: 4;
		}

		/* Subgrid hack 5 items */
		&[data-bge-group]:has([data-bge-item]:nth-child(5):last-child) {
			--item-count: 5;
		}

		/* Subgrid hack 6 items */
		&[data-bge-group]:has([data-bge-item]:nth-child(6):last-child) {
			--item-count: 6;
		}

		/* Subgrid hack 7 items */
		&[data-bge-group]:has([data-bge-item]:nth-child(7):last-child) {
			--item-count: 7;
		}

		/* Subgrid hack 8 items */
		&[data-bge-group]:has([data-bge-item]:nth-child(8):last-child) {
			--item-count: 8;
		}
	}

	:where([data-bge-item]) {
		align-self: self-start;
		container-name: bge-item;
		container-type: inline-size;
	}
}

:where([data-bge-container='inline'], [data-bge-container^='inline:']) {
	:where([data-bge-container-frame]) {
		display: flex;
		flex-wrap: wrap;
		gap: var(--bge-options-gap);
		align-items: stretch;
		justify-content: center;

		&:where(:is([data-bge-container$=':center'], [data-bge-container*=':center:']) *) {
			justify-content: center;
		}

		&:where(:is([data-bge-container$=':start'], [data-bge-container*=':start:']) *) {
			justify-content: start;
		}

		&:where(:is([data-bge-container$=':end'], [data-bge-container*=':end:']) *) {
			justify-content: end;
		}

		&:where(:is([data-bge-container$=':between'], [data-bge-container*=':between:']) *) {
			justify-content: space-between;
		}

		&:where(:is([data-bge-container$=':around'], [data-bge-container*=':around:']) *) {
			justify-content: space-around;
		}

		&:where(:is([data-bge-container$=':evenly'], [data-bge-container*=':evenly:']) *) {
			justify-content: space-evenly;
		}

		&:where(
			:is([data-bge-container$=':align-center'], [data-bge-container*=':align-center:']) *
		) {
			align-items: center;
		}

		&:where(
			:is([data-bge-container$=':align-start'], [data-bge-container*=':align-start:']) *
		) {
			align-items: start;
		}

		&:where(
			:is([data-bge-container$=':align-end'], [data-bge-container*=':align-end:']) *
		) {
			align-items: end;
		}

		&:where(
			:is([data-bge-container$=':align-stretch'], [data-bge-container*=':align-stretch:'])
				*
		) {
			align-items: stretch;
		}

		&:where(
			:is(
					[data-bge-container$=':align-baseline'],
					[data-bge-container*=':align-baseline:']
				)
				*
		) {
			--align: baseline;
		}

		&:where(:is([data-bge-container$=':wrap'], [data-bge-container*=':wrap:']) *) {
			flex-wrap: wrap;
		}

		&:where(:is([data-bge-container$=':nowrap'], [data-bge-container*=':nowrap:']) *) {
			flex-wrap: nowrap;
		}
	}

	&:where([data-bge-container$=':immutable'], [data-bge-container*=':immutable:'])
		:where([data-bge-container-frame]) {
		& > * {
			flex: 1 1 auto;
		}
	}
}

:where([data-bge-container='float'], [data-bge-container^='float:']) {
	--bge-grid-float: none;
	--margin-inline: 0;

	&:where([data-bge-container$=':start'], [data-bge-container*=':start:']) {
		--bge-grid-float: inline-start;
		--margin-inline: 0 var(--bge-options-gap);
	}

	&:where([data-bge-container$=':end'], [data-bge-container*=':end:']) {
		--bge-grid-float: inline-end;
		--margin-inline: var(--bge-options-gap) 0;
	}

	:where([data-bge-container-frame]) {
		&::after {
			clear: both;
			display: block;
			content: '';
		}

		& > :where(:first-child) {
			float: var(--bge-grid-float, none);
			inline-size: fit-content;
			margin-inline: var(--margin-inline);
		}
	}
}

